--- a/.github/workflows/github-contribution-grid-snake.yml
+++ b/.github/workflows/github-contribution-grid-snake.yml
@@ -14,13 +14,17 @@ jobs:
 
     steps:
       - name: generate animation.svg
-        uses: Platane/snk@master
+        uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
-          svg_out_path: dist/github-contribution-grid-snake.svg
+          svg_out_path: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: push animation.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v2.5.0
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: github-contribution-grid-snake
           build_dir: dist
