Update options for grs-action in workflow

--- a/.github/workflows/grs.yml
+++ b/.github/workflows/grs.yml
@@ -23,7 +23,7 @@ jobs:
         id: generate
         with:
           card: stats
-          options: username=${{ github.repository_owner }}&show_icons=true&count_private=true&include_all_commits=true&number_format=long&hide_title=true&show=discussions_started&hide_border=true&disable_animations=true&hide_rank=true&theme=${{ matrix.theme }}
+          options: username=${{ github.repository_owner }}&show_icons=true&count_private=true&include_all_commits=true&number_format=short&hide_title=false&show=discussions_started=false&hide_border=true&disable_animations=true&hide_rank=true&theme=${{ matrix.theme }}
           path: grs/stats-${{ matrix.theme }}.svg
         env:
           PAT_1: ${{ secrets.GITHUB_TOKEN }}
@@ -46,7 +46,7 @@ jobs:
         uses: UlyssesZh/grs-action@v0
         id: generate
         with:
-          options: username=${{ github.repository_owner }}&layout=compact&hide_title=true&hide=tex,html&langs_count=16&hide_border=true&disable_animations=true&theme=${{ matrix.theme }}
+          options: "username=${{ github.repository_owner }}&layout=compact&hide_title=false&hide=tex,html,mdx,vim snippet&langs_count=8&hide_border=true&disable_animations=true&theme=${{ matrix.theme }}"
           path: grs/langs-${{ matrix.theme }}.svg
           card: langs
         env:
